WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38959
Incorrect compositing order with negative z-index
https://bugs.webkit.org/show_bug.cgi?id=38959
Summary
Incorrect compositing order with negative z-index
Simon Fraser (smfr)
Reported
2010-05-11 17:42:06 PDT
Created
attachment 55785
[details]
Testcase The testcase shows an incorrect rendering with using compositing layers. The contents of the "compositing" div are not visible.
Attachments
Testcase
(523 bytes, text/html)
2010-05-11 17:42 PDT
,
Simon Fraser (smfr)
no flags
Details
Initial cleanup patch
(3.19 KB, patch)
2010-07-06 11:45 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Patch
(7.97 KB, patch)
2010-07-06 12:06 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-06-17 21:18:42 PDT
I think this is caused by the: // FIXME: should these be painted as background? in RenderLayerBacking::paintIntoLayer().
Simon Fraser (smfr)
Comment 2
2010-07-06 11:45:00 PDT
Created
attachment 60648
[details]
Initial cleanup patch
Simon Fraser (smfr)
Comment 3
2010-07-06 12:06:35 PDT
Created
attachment 60650
[details]
Patch
mitz
Comment 4
2010-07-06 12:27:22 PDT
Comment on
attachment 60650
[details]
Patch
> \ No newline at end of file
:-(
Simon Fraser (smfr)
Comment 5
2010-07-08 22:38:15 PDT
http://trac.webkit.org/changeset/62682
http://trac.webkit.org/changeset/62683
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug