2010-07-06  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Incorrect compositing order with negative z-index
        https://bugs.webkit.org/show_bug.cgi?id=38959

        Prerequisite: adopt new paintList() method that was added when painting compositing layer contents.
        No behavioral changes.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::paintIntoLayer):

Canonical link: https://commits.webkit.org/53597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62682 268f45cc-cd09-0410-ab3c-d52691b4dbfc